--- v1.4 (2017-xx-xx) ---
*** common ***
* Update Qt SDK version from 5.8.0 to 5.9.1.
* Update Android NDK version from r13b to r15b.
* Delete 'qt-sdk' target and add 'qt-sdk-online' and 'qt-sdk-offline' into
  Makefile instead of it. Only 'qt-sdk-online' is used when default target
  ('download') is called.
*** build-project ***
* Fix calculation of SYSTEMS variable when more than 9 systems are set througt
  command-line options.

--- v1.3 (2017-05-30) ---
*** common ***
* Update Qt SDK version from 5.7.1 to 5.8.0.
* Update Android NDK version from r13b to r14b.
* Update Android SDK version from r24.4.1 to r25.2.5.
  Newer versions (>= 25.3.0) could not be used because due to missing of Gradle
  scripts they break packaging of APK files.
*** build-project ***
* Change order of checks in DetectBuildAutomationSystemType():
  from: qmake --> cmake --> autotools --> unknown
  to:   cmake --> autotools --> qmake --> unknown
* Update InstallQmakeProject():
  delete automatically generated *_resource.rc files.

--- v1.2 (2017-01-23) ---
*** common ***
* Update Qt SDK version from 5.7.0 to 5.7.1.
* Update Android SDK version from r24.4.1 to r25.2.3.
* Update Android NDK version from r12b to r13b.
* Unpack Android SDK and NDK after downloading using `unzip` tool.
*** build-project ***
* Add support of build of cmake-based projects for Android.

--- v1.1 (2016-11-19) ---
*** common ***
* Add 'linux', 'windows', 'android' and 'qt-sdk' targets into Makefile for
  downloading of LXE, MXE, Android SDK+NDK and Qt SDK accordingly. Default
  target ('download') use them all sequentially.
* Update Android NDK version from r12 to r12b.
*** build-project ***
* Update InstallQmakeProject():
  - delete more extra files which are generated by Qt >= 5.7
  - delete static libraries only if there are other files besides them
* Update cmake usage in PrepareBuild() after changes in MXE and LXE.
* Change target names scheme for Android builds: