@@ -3,10 +3,10 @@ DOWNLOADER = wget
 UNZIP = unzip
 GIT = git
 
-ANDROID_SDK_VERSION = r25.2.5
+ANDROID_SDK_VERSION = 3859397
 ANDROID_NDK_VERSION = r15b
 
-ANDROID_SDK_CHECKSUM = 577516819c8b5fae680f049d39014ff1ba4af870b687cab10595783e6f22d33e
+ANDROID_SDK_CHECKSUM = 444e22ce8ca0f67353bda4b85175ed3731cae3ffa695ca18119cbacef1c1bea0
 ANDROID_NDK_CHECKSUM = 2690d416e54f88f7fa52d0dcb5f539056a357b3b
 
 QT_SERIES=5.9
@@ -17,7 +17,7 @@ QT_VERSION=5.9.1
 # https://download.qt.io/official_releases/qt/
 # https://wiki.qt.io/Qt_for_Android_known_issues
 
-ANDROID_SDK_FILE = tools_$(ANDROID_SDK_VERSION)-linux.zip
+ANDROID_SDK_FILE = sdk-tools-linux-$(ANDROID_SDK_VERSION).zip
 ANDROID_NDK_FILE = android-ndk-$(ANDROID_NDK_VERSION)-linux-x86_64.zip
 
 ANDROID_SDK_URL = https://dl.google.com/android/repository
