@@ -2,6 +2,7 @@
 *** common ***
 * Update Qt SDK version from 5.8.0 to 5.9.1.
 * Update Android NDK version from r13b to r15b.
+* Update Android SDK version from r25.2.5 to r26.0.2 (3859397).
 * Delete 'qt-sdk' target and add 'qt-sdk-online' and 'qt-sdk-offline' into
   Makefile instead of it. Only 'qt-sdk-online' is used when default target
   ('download') is called.
